--- a/fontes/css/documento/secoes.css
+++ b/fontes/css/documento/secoes.css
@@ -74,13 +74,23 @@ section.textual > h5 {
 	font-style: italic;
 }
 
-section.textual > ul {
+section.textual > ul,
+section.textual > ol {
 	margin-left: 2cm;
+}
+
+section.textual > ul > li,
+section.textual > ol > li {
+	list-style-position: outside;
+	text-align: justify;
 }
 
 section.textual > ul > li {
 	list-style-type: disc;
-	list-style-position: outside;
+}
+
+section.textual > ol > li {
+	list-style-type: decimal;
 }
 
 section.preTextual > h1,
