--- a/fontes/css/documento/textual.css
+++ b/fontes/css/documento/textual.css
@@ -38,7 +38,7 @@ cite {
 	text-transform: uppercase;
 }
 
-cite.parenteses time::before,
+cite.parenteses time::before
 cite.parenteses time::after {
 	content: none;
 }
@@ -94,6 +94,14 @@ figure > pre {
 	white-space: normal;
 }
 
+figure > img {
+	display: block;
+	box-sizing: border-box;
+	max-width: 100%;
+}
+
+
+figure > img,
 figure > pre > ul,
 figure > pre > ol,
 figure > figcaption {
