--- a/fontes/css/documento/textual.css
+++ b/fontes/css/documento/textual.css
@@ -25,7 +25,7 @@ a {
 	text-transform: inherit;
 }
 
-cite a {
+cite > a {
 	background-color: rgba(11, 148, 83, 0.1);
 	border-color: rgba(11, 148, 83, 1);
 }
@@ -34,7 +34,7 @@ a:hover {
 	border-style: dotted;
 }
 
-cite {
+cite.parenteses {
 	text-transform: uppercase;
 }
 
@@ -45,13 +45,13 @@ cite.parenteses time::after {
 
 cite.parenteses::before,
 cite time::before,
-dfn abbr::before {
+dfn > abbr::before {
 	content: "(";
 }
 
 cite.parenteses::after,
 cite time::after,
-dfn abbr::after {
+dfn > abbr::after {
 	content: ")";
 }
 
