--- a/fontes/css/documento/documento.css
+++ b/fontes/css/documento/documento.css
@@ -9,7 +9,11 @@
 	font-size: 12pt;
 	font-size: 1rem;
 	line-height: 1.5;
+	print-color-adjust: exact;
 	-webkit-print-color-adjust: exact;
+	-moz-print-color-adjust: exact;
+	-o-print-color-adjust: exact;
+	-ms-print-color-adjust: exact;
 }
 
 body > * {
